manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb-headless
  namespace: cockroach
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: cockroachdb
  ports:
    - name: sql
      port: 26257
      targetPort: sql
---
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb
  namespace: cockroach
spec:
  type: ClusterIP
  selector:
    app: cockroachdb
  ports:
    - name: sql
      port: 26257
      targetPort: sql
    - name: http
      port: 8080
      targetPort: http
